Updating to provide more detail on the data and sources

--- a/CameoPrices.ipynb
+++ b/CameoPrices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,18 @@
     "1. Cameo.com -- The website where you can purchase videos from celebrities \n",
     "2. FameFlux.com -- A website that ranks celebrities and companies by their online popularity\n",
     "\n",
-    "The Cameo data was scrapped from Janurary 21st 2020 and contains the information below, including the name of the celebrity, the cameo video price and the star rating for the cel\n",
+    "The Cameo data was scrapped from Janurary 21st 2021 and contains the information below, including the name of the celebrity, the cameo video price and the star rating for the celebrities. \n",
     "\n",
-    "Fame Flux includes all the data "
+    "Fame Flux includes all the data below that begins with FF including the full name of the celebrity, the celebrity's celebrity rating. It was also gathered on Janurary 21st 2021. \n",
+    "\n",
+    "Link to article where I found the source: https://www.netcredit.com/blog/cost-effective-celebs-on-cameo/\n",
+    "\n",
+    "I'll use this data to figure out how Fame Flux data (the independent variables) can be used to determing the price of cameos (dependent variable)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +264,7 @@
        "4                     19.802                       5  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,11 +275,326 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Dependent Variable Cost per Cameo - This is how much a customer must pay for the cameo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Full name</th>\n",
+       "      <th>Cameo chat price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Marla Maples</td>\n",
+       "      <td>9.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Gina Rodriguez</td>\n",
+       "      <td>2.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nancy Kerrigan</td>\n",
+       "      <td>2.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LaVar Ball</td>\n",
+       "      <td>2.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ice Cube</td>\n",
+       "      <td>2.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5992</th>\n",
+       "      <td>Emeke Egbule</td>\n",
+       "      <td>2.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5993</th>\n",
+       "      <td>Sean Klitzner</td>\n",
+       "      <td>19.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5994</th>\n",
+       "      <td>Kinsey Schofield</td>\n",
+       "      <td>2.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5995</th>\n",
+       "      <td>Liz Katz</td>\n",
+       "      <td>2.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5996</th>\n",
+       "      <td>Cameron Walker</td>\n",
+       "      <td>2.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5997 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Full name  Cameo chat price\n",
+       "0         Marla Maples              9.99\n",
+       "1       Gina Rodriguez              2.99\n",
+       "2       Nancy Kerrigan              2.99\n",
+       "3           LaVar Ball              2.99\n",
+       "4             Ice Cube              2.99\n",
+       "...                ...               ...\n",
+       "5992      Emeke Egbule              2.99\n",
+       "5993     Sean Klitzner             19.99\n",
+       "5994  Kinsey Schofield              2.99\n",
+       "5995          Liz Katz              2.99\n",
+       "5996    Cameron Walker              2.99\n",
+       "\n",
+       "[5997 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pulling in the dependent variable and full name so there's a reference point \n",
+    "dependent=cameo[['Full name', 'Cameo chat price']] \n",
+    "dependent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Description of the dependent variables "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cameo chat price - is the price a customer has to pay for the ~1minute video from the celebrity as described by the 'Full name' column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Independent Variable - Fame Flux data -- these are the fields that will be used to determine the price per Cameo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FF Full name</th>\n",
+       "      <th>FF Celebrity rating</th>\n",
+       "      <th>FF Main category rating</th>\n",
+       "      <th>Wikipedia Traffic\\n(Avg. daily)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Marla Maples</td>\n",
+       "      <td>202</td>\n",
+       "      <td>90</td>\n",
+       "      <td>8608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Gina Rodriguez</td>\n",
+       "      <td>1,524</td>\n",
+       "      <td>177</td>\n",
+       "      <td>3526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nancy Kerrigan</td>\n",
+       "      <td>948</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LaVar Ball</td>\n",
+       "      <td>369</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ice Cube</td>\n",
+       "      <td>101</td>\n",
+       "      <td>43</td>\n",
+       "      <td>6460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5992</th>\n",
+       "      <td>Emeke Egbule</td>\n",
+       "      <td>910416</td>\n",
+       "      <td>79333</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5993</th>\n",
+       "      <td>Sean Klitzner</td>\n",
+       "      <td>230115</td>\n",
+       "      <td>7349</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5994</th>\n",
+       "      <td>Kinsey Schofield</td>\n",
+       "      <td>250578</td>\n",
+       "      <td>38900</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5995</th>\n",
+       "      <td>Liz Katz</td>\n",
+       "      <td>910416</td>\n",
+       "      <td>79333</td>\n",
+       "      <td>381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5996</th>\n",
+       "      <td>Cameron Walker-Wright</td>\n",
+       "      <td>360193</td>\n",
+       "      <td>49781</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5997 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               FF Full name FF Celebrity rating  FF Main category rating  \\\n",
+       "0              Marla Maples                 202                       90   \n",
+       "1            Gina Rodriguez               1,524                      177   \n",
+       "2            Nancy Kerrigan                 948                        2   \n",
+       "3                LaVar Ball                 369                       27   \n",
+       "4                  Ice Cube                 101                       43   \n",
+       "...                     ...                 ...                      ...   \n",
+       "5992           Emeke Egbule              910416                    79333   \n",
+       "5993          Sean Klitzner              230115                     7349   \n",
+       "5994       Kinsey Schofield              250578                    38900   \n",
+       "5995               Liz Katz              910416                    79333   \n",
+       "5996  Cameron Walker-Wright              360193                    49781   \n",
+       "\n",
+       "      Wikipedia Traffic\\n(Avg. daily)  \n",
+       "0                                8608  \n",
+       "1                                3526  \n",
+       "2                                1816  \n",
+       "3                                1558  \n",
+       "4                                6460  \n",
+       "...                               ...  \n",
+       "5992                               19  \n",
+       "5993                               22  \n",
+       "5994                                7  \n",
+       "5995                              381  \n",
+       "5996                               15  \n",
+       "\n",
+       "[5997 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### showing it with the name of the person so we can see how it's variable by the person. \n",
+    "independent =cameo[['FF Full name', 'FF Celebrity rating', 'FF Main category rating', 'Wikipedia Traffic\\n(Avg. daily)']] \n",
+    "independent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Independent Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- FF Full name - is the full name from the Fame Flux website \n",
+    "- FF Celebrity rating - is the ranking of the celebrities compared to another. A ranking of 1 would be the most famous of celebrities. The highest number means the highest the less famous the celebrities is. \n",
+    "- FF Main category rating - is the rating of the celebrity within their category. For example, if the person is a muscian then they might have a general ranking (FF Celebrity ranking) of 202, but a muscian category ranking (FF Main category rating) of 90\n",
+    "- Wikipedia Traffic\\n(Avg. daily) - is the daily number of visits that go to the celebrities wikipeida page per a day on average. \n",
+    "\n",
+    "All of these indicate how famous a particular person is to the general population. Each of these numeric values will be used to determine the p"
+   ]
   }
  ],
  "metadata": {
